Fix slider image sizing on report card

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -567,6 +567,10 @@ a {
     justify-content: center;
   }
 
+  .slideHolder {
+    height: 150px;
+  }
+
   #currentLocation img,
   .box.swiperContainer img {
     width: 40%;
